--- a/index.html
+++ b/index.html
@@ -209,15 +209,22 @@
         <li>
           <a href="./index.html" class="text-primary-color text-[18px] font-medium active"> الرئيسية </a>
         </li>
+         <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> أجهزة</a>
+        </li>
         <li>
-          <a href="./about-us.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الكتب </a>
+        </li>
+        <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الروايات </a>
+        </li>
+        <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الدعايا و الأعلان </a>
         </li>
         <li>
           <a href="./contact-us.html" class="text-third-color text-[18px] font-medium"> اتصل بنا </a>
         </li>
-        <li>
-          <a href="./be-store.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
-        </li>
+         
         <li>
           <a href="./stores.html" class="text-third-color text-[18px] font-medium"> المتاجر </a>
         </li>
@@ -1078,7 +1085,7 @@
     <div class="be__store bg-second-color p-5 flex justify-center items-center flex-col gap-3">
       <h2 class="text-primary-color sm:text-[35px] text-[25px] font-semibold text-center"> كن متجر مشارك معنا </h2>
       <p class="text-primary-color sm:text-[20px] text-[18px] font-medium text-center"> يمكنك مشاهدة منتجاتك وجذب شريحة جديدة من المستخدمين </p>
-      <a href="./be-store.html" class="text-white sm:text-[20px] text-[16px] font-semibold bg-primary-color  flex justify-center items-center sm:py-[10px] py-[6px] sm:px-[30px] px-[15px] rounded-[8px]"> سـجـل كـبـائـع </a>
+      <a href="./be-store.html" class="text-white sm:text-[20px] text-[16px] font-semibold bg-primary-color  flex justify-center items-center sm:py-[10px] py-[6px] sm:px-[30px] px-[15px] rounded-[8px]"> سـجـل كـمـتـجـر </a>
     </div>
     <!-- be store -->
 
