--- a/product-details.html
+++ b/product-details.html
@@ -173,15 +173,22 @@
         <li>
           <a href="./index.html" class="text-primary-color text-[18px] font-medium active"> الرئيسية </a>
         </li>
+         <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> أجهزة</a>
+        </li>
         <li>
-          <a href="./about-us.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الكتب </a>
+        </li>
+        <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الروايات </a>
+        </li>
+        <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الدعايا و الأعلان </a>
         </li>
         <li>
           <a href="./contact-us.html" class="text-third-color text-[18px] font-medium"> اتصل بنا </a>
         </li>
-        <li>
-          <a href="./be-store.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
-        </li>
+         
         <li>
           <a href="./stores.html" class="text-third-color text-[18px] font-medium"> المتاجر </a>
         </li>
@@ -248,6 +255,27 @@
                     </div>
                     <p class="text-fourth-color sm:text-[15px] text-[14px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
                     <span class="text-fourth-color sm:text-[14px] text-[13px] font-medium mb-0"> SKU : HFKUHB58POLMQE </span>
+                    <form action="" class="flex justify-start items-start flex-col gap-3">
+                      <div class="product-color">
+                          <div class=" product-chosse-color flex justify-start items-center flex-row gap-3">
+                              <label for="" class="black color-button" style="background-color:#000;">
+                                  <input type="radio">
+                              </label>
+                              <label for="" class="red color-button" style="background-color:#ed1c24;">
+                                  <input type="radio">
+                              </label>
+                              <label for="" class="yellow color-button" style="background-color:#f1af4d;">
+                                  <input type="radio">
+                              </label>
+                              <label for="" class="brown color-button" style="background-color:#636068;">
+                                  <input type="radio">
+                              </label>
+                              <label for="" class="pink color-button" style="background-color:#e8bac4;">
+                                  <input type="radio">
+                              </label>
+                          </div>
+                      </div>
+                    </form>
                     <div>
                         <form class="inc_dec text-start border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[250px] flex justify-between items-center flex-row h-[50px]">
                             <div class="value-button text-[20px] cursor-pointer" id="decrease" onclick="decreaseValue()" value="Decrease Value">-</div>
