--- a/be-store.html
+++ b/be-store.html
@@ -173,15 +173,22 @@
         <li>
           <a href="./index.html" class="text-primary-color text-[18px] font-medium active"> الرئيسية </a>
         </li>
+         <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> أجهزة</a>
+        </li>
         <li>
-          <a href="./about-us.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الكتب </a>
+        </li>
+        <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الروايات </a>
+        </li>
+        <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الدعايا و الأعلان </a>
         </li>
         <li>
           <a href="./contact-us.html" class="text-third-color text-[18px] font-medium"> اتصل بنا </a>
         </li>
-        <li>
-          <a href="./be-store.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
-        </li>
+         
         <li>
           <a href="./stores.html" class="text-third-color text-[18px] font-medium"> المتاجر </a>
         </li>
@@ -232,6 +239,17 @@
                             </div>
                             <div class="flex justify-start items-start flex-col gap-2 mb-3 w-100">
                                 <span for="" class="form-label text-third-color font-semibold text-[16px] mb-2"> لوجر المتجر </span>
+                                <div class="file__zone d-flex justify-content-center align-items-center flex-column my-3 w-100"
+                                    style="gap: 8px">
+                                    <input class="form-control" type="file" id="formFile">
+                                    <img src="./assets/images/down.svg" alt="download" alt="download"
+                                            loading="lazy" width="40" height="40"/>
+                                    <span> اضغط او قم بالسحب </span>
+                                    <p>png, jpg, jpeg (max. 800x400px)</p>
+                                </div>
+                            </div>
+                            <div class="flex justify-start items-start flex-col gap-2 mb-3 w-100">
+                                <span for="" class="form-label text-third-color font-semibold text-[16px] mb-2">  إرفاق مستندات </span>
                                 <div class="file__zone d-flex justify-content-center align-items-center flex-column my-3 w-100"
                                     style="gap: 8px">
                                     <input class="form-control" type="file" id="formFile">
