--- a/cart.html
+++ b/cart.html
@@ -173,15 +173,22 @@
         <li>
           <a href="./index.html" class="text-primary-color text-[18px] font-medium active"> الرئيسية </a>
         </li>
+         <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> أجهزة</a>
+        </li>
         <li>
-          <a href="./about-us.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الكتب </a>
+        </li>
+        <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الروايات </a>
+        </li>
+        <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الدعايا و الأعلان </a>
         </li>
         <li>
           <a href="./contact-us.html" class="text-third-color text-[18px] font-medium"> اتصل بنا </a>
         </li>
-        <li>
-          <a href="./be-store.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
-        </li>
+         
         <li>
           <a href="./stores.html" class="text-third-color text-[18px] font-medium"> المتاجر </a>
         </li>
@@ -236,9 +243,9 @@
                             </td>
                             <td>
                                 <span >
-                                    <form class="inc_dec text-start border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[250px] flex justify-between items-center flex-row h-[50px]">
+                                    <form class="inc_dec text-start border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[250px] w-[100px] flex justify-between items-center flex-row h-[50px]">
                                         <div class="value-button text-[20px] cursor-pointer" id="decrease" onclick="decreaseValue()" value="Decrease Value">-</div>
-                                        <input type="number" id="number" value="1" class="text-center" min="1"/>
+                                        <input type="number" id="number" value="1" class="text-center sm:w-auto w-[50px]" min="1"/>
                                         <div class="value-button cursor-pointer" id="increase" onclick="increaseValue()" value="Increase Value">+</div>
                                     </form>
                                 </span>
@@ -270,11 +277,11 @@
                             </td>
                             <td>
                                 <span >
-                                    <form class="inc_dec text-start border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[250px] flex justify-between items-center flex-row h-[50px]">
-                                        <div class="value-button text-[20px] cursor-pointer" id="decrease" onclick="decreaseValue()" value="Decrease Value">-</div>
-                                        <input type="number" id="number" value="1" class="text-center" min="1"/>
-                                        <div class="value-button cursor-pointer" id="increase" onclick="increaseValue()" value="Increase Value">+</div>
-                                    </form>
+                                  <form class="inc_dec text-start border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[250px] w-[100px] flex justify-between items-center flex-row h-[50px]">
+                                    <div class="value-button text-[20px] cursor-pointer" id="decrease" onclick="decreaseValue()" value="Decrease Value">-</div>
+                                    <input type="number" id="number" value="1" class="text-center sm:w-auto w-[50px]" min="1"/>
+                                    <div class="value-button cursor-pointer" id="increase" onclick="increaseValue()" value="Increase Value">+</div>
+                                </form>
                                 </span>
                             </td>
                             <td>
