--- a/category.html
+++ b/category.html
@@ -173,15 +173,22 @@
         <li>
           <a href="./index.html" class="text-third-color text-[18px] font-medium"> الرئيسية </a>
         </li>
+         <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> أجهزة</a>
+        </li>
         <li>
-          <a href="./about-us.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الكتب </a>
+        </li>
+        <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الروايات </a>
+        </li>
+        <li>
+          <a href="./categories.html" class="text-third-color text-[18px] font-medium"> الدعايا و الأعلان </a>
         </li>
         <li>
           <a href="./contact-us.html" class="text-third-color text-[18px] font-medium"> اتصل بنا </a>
         </li>
-        <li>
-          <a href="./be-store.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
-        </li>
+         
         <li>
           <a href="./stores.html" class="text-primary-color text-[18px] font-medium active"> المتاجر </a>
         </li>
