--- a/index.html
+++ b/index.html
@@ -1604,6 +1604,9 @@
       <div class="modal-dialog modal-xl">
         <div class="modal-content">
           <div class="modal-body">
+            <div class="flex justify-start items-start flex-row mb-4">
+              <button data-bs-dismiss="modal" aria-label="Close" type="button"> <img src="./assets/images/close-circle.svg" alt="close" width="30" height="30"> </button>
+            </div>
             <div class="row">
               <div class="col-md-6">
                   <div class="product_details_imgs flex justify-start items-start flex-col gap-3 relative">
