--- a/categories.html
+++ b/categories.html
@@ -237,28 +237,65 @@
                                                     <input class="form-check-input" type="radio" name="flexRadioDefault"
                                                         id="star1">
                                                     <label class="form-check-label" for="star1">
-                                                        نجمة واحدة
+                                                      <div class="stars flex justify-start items-center flex-row gap-1">
+                                                          <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                                                          <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                          <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                          <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                          <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                      </div>
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="radio" name="flexRadioDefault"
                                                         id="star2">
                                                     <label class="form-check-label" for="star2">
-                                                        2 نجمة أو أكثر
+                                                      <div class="stars flex justify-start items-center flex-row gap-1">
+                                                        <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                                                        <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                        <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                        <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                        <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                      </div>
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="radio" name="flexRadioDefault"
                                                         id="star3">
                                                     <label class="form-check-label" for="star3">
-                                                        3 نجمة أو أكثر
+                                                      <div class="stars flex justify-start items-center flex-row gap-1">
+                                                        <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                                                        <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                        <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                        <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                        <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                      </div>
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="radio" name="flexRadioDefault"
                                                         id="star4">
                                                     <label class="form-check-label" for="star4">
-                                                        4 نجمة أو أكثر
+                                                      <div class="stars flex justify-start items-center flex-row gap-1">
+                                                        <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                                                        <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                        <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                        <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                        <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                      </div>
+                                                    </label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                        id="star5">
+                                                    <label class="form-check-label" for="star5">
+                                                      <div class="stars flex justify-start items-center flex-row gap-1">
+                                                        <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                                                        <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                        <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                        <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                        <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                      </div>
                                                     </label>
                                                 </div>
                                             </div>
