--- a/store-details.html
+++ b/store-details.html
@@ -258,48 +258,85 @@
                         <div id="sidebar">
                             <form action="">
                                 <div class="accordion" id="accordionPanelsStayOpenExample">
-                                    <div class="accordion-item">
-                                        <h2 class="accordion-header" id="panelsStayOpen-starts">
-                                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                                data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
-                                                aria-controls="panelsStayOpen-collapseOne">
-                                                عدد النجوم
-                                            </button>
-                                        </h2>
-                                        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
-                                            aria-labelledby="panelsStayOpen-starts">
-                                            <div class="accordion-body">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                                        id="star1">
-                                                    <label class="form-check-label" for="star1">
-                                                        نجمة واحدة
-                                                    </label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                                        id="star2">
-                                                    <label class="form-check-label" for="star2">
-                                                        2 نجمة أو أكثر
-                                                    </label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                                        id="star3">
-                                                    <label class="form-check-label" for="star3">
-                                                        3 نجمة أو أكثر
-                                                    </label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                                        id="star4">
-                                                    <label class="form-check-label" for="star4">
-                                                        4 نجمة أو أكثر
-                                                    </label>
-                                                </div>
+                                  <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-starts">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                            aria-controls="panelsStayOpen-collapseOne">
+                                            عدد النجوم
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                                        aria-labelledby="panelsStayOpen-starts">
+                                        <div class="accordion-body">
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                    id="star1">
+                                                <label class="form-check-label" for="star1">
+                                                  <div class="stars flex justify-start items-center flex-row gap-1">
+                                                      <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                                                      <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                      <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                      <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                      <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                  </div>
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                    id="star2">
+                                                <label class="form-check-label" for="star2">
+                                                  <div class="stars flex justify-start items-center flex-row gap-1">
+                                                    <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                                                    <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                    <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                    <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                    <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                  </div>
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                    id="star3">
+                                                <label class="form-check-label" for="star3">
+                                                  <div class="stars flex justify-start items-center flex-row gap-1">
+                                                    <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                                                    <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                    <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                    <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                    <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                  </div>
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                    id="star4">
+                                                <label class="form-check-label" for="star4">
+                                                  <div class="stars flex justify-start items-center flex-row gap-1">
+                                                    <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                                                    <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                    <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                    <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                    <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                                                  </div>
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                    id="star5">
+                                                <label class="form-check-label" for="star5">
+                                                  <div class="stars flex justify-start items-center flex-row gap-1">
+                                                    <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                                                    <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                    <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                    <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                    <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                                                  </div>
+                                                </label>
                                             </div>
                                         </div>
                                     </div>
+                                </div>
                                     <div class="accordion-item">
                                         <h2 class="accordion-header" id="panelsStayOpen-model">
                                             <button class="accordion-button collapsed" type="button"
