--- a/profile.html
+++ b/profile.html
@@ -453,7 +453,130 @@
                         </div>
                       </div>
                     </div>
-                    <div class="tab-pane fade" id="v-pills-orders" role="tabpanel" aria-labelledby="v-pills-orders-tab" tabindex="0">...</div>
+                    <div class="tab-pane fade" id="v-pills-orders" role="tabpanel" aria-labelledby="v-pills-orders-tab" tabindex="0">
+                      <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                              <tr>
+                                <th scope="col" class="text-third-color font-semibold text-[16px]">رقم الطلب</th>
+                                <th scope="col" class="text-third-color font-semibold text-[16px]">تاريخ الطلب</th>
+                                <th scope="col" class="text-third-color font-semibold text-[16px]">عنوان التوصيل</th>
+                                <th scope="col" class="text-third-color font-semibold text-[16px]">طرق الدفع</th>
+                                <th scope="col" class="text-third-color font-semibold text-[16px]">اجمالي الطلب</th>
+                                <th scope="col" class="text-third-color font-semibold text-[16px]">الحالة</th>
+                                <th scope="col" class="text-third-color font-semibold text-[16px]">اجراء</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr class="h-[52px] leading-[52px]">
+                                <td>
+                                    #6567567
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]"> 
+                                        27 - 11 - 2020
+                                    </span> 
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]"> 
+                                        مكه
+                                    </span>
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]">
+                                      mada
+                                    </span>
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]">
+                                        1000 ر.س
+                                    </span>
+                                </td>
+                                <td>
+                                    <span class="bg-primary-color text-[#fff] font-medium text-[15px] py-[5px] px-[10px] rounded-[6px] max-sm:max-w-max max-sm:block">
+                                        تم التوصيل
+                                    </span>
+                                </td>
+                                <td>
+                                    <a href="./order-details.html" class="mt-[12px] block">
+                                        <img src="./assets/images/eye.svg" alt="trash" width="24" height="24">
+                                    </a>
+                                </td>
+                              </tr>
+                              <tr class="h-[52px] leading-[52px]">
+                                <td>
+                                    #6567567
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]"> 
+                                        27 - 11 - 2020
+                                    </span> 
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]"> 
+                                        مكه
+                                    </span>
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]">
+                                      mada
+                                    </span>
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]">
+                                        1000 ر.س
+                                    </span>
+                                </td>
+                                <td>
+                                    <span class="bg-[#d79806] text-[#fff] font-medium text-[15px] py-[5px] px-[10px] rounded-[6px] max-sm:max-w-max max-sm:block">
+                                        تحت التجهيز
+                                    </span>
+                                </td>
+                                <td>
+                                    <a href="./order-details.html" class="mt-[12px] block">
+                                        <img src="./assets/images/eye.svg" alt="trash" width="24" height="24">
+                                    </a>
+                                </td>
+                              </tr>
+                              <tr class="h-[52px] leading-[52px]">
+                                <td>
+                                    #6567567
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]"> 
+                                        27 - 11 - 2020
+                                    </span> 
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]"> 
+                                        مكه
+                                    </span>
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]">
+                                      mada
+                                    </span>
+                                </td>
+                                <td>
+                                    <span class="text-fourth-color font-medium text-[15px]">
+                                        1000 ر.س
+                                    </span>
+                                </td>
+                                <td>
+                                    <span class="bg-second-color text-primary-color font-medium text-[15px] py-[5px] px-[10px] rounded-[6px] max-sm:max-w-max max-sm:block">
+                                        جاري الشحن
+                                    </span>
+                                </td>
+                                <td>
+                                    <a href="./order-details.html" class="mt-[12px] block">
+                                        <img src="./assets/images/eye.svg" alt="trash" width="24" height="24">
+                                    </a>
+                                </td>
+                              </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    </div>
                   </div>
             </div>
         </div>
