--- a/checkout.html
+++ b/checkout.html
@@ -230,6 +230,7 @@
                             </div>
                             <div class="flex justify-start items-start flex-col gap-2">
                                 <span class="text-third-color font-semibold text-[18px]"> مكه </span>
+                                <span class="text-third-color font-medium text-[17px]"> منقطة 1 - حي 1 </span>
                                 <p class="text-fourth-color font-medium text-[15px] mb-0"> MEMB3077، 3077 طريق مشاة، 8360، المشاعر، مكة 24258، السعودية </p>
                             </div>
                         </label>
@@ -245,6 +246,7 @@
                             </div>
                             <div class="flex justify-start items-start flex-col gap-2">
                                 <span class="text-third-color font-semibold text-[18px]"> جده </span>
+                                <span class="text-third-color font-medium text-[17px]"> منقطة 1 - حي 1 </span>
                                 <p class="text-fourth-color font-medium text-[15px] mb-0"> MEMB3077، 3077 طريق مشاة، 8360، المشاعر، مكة 24258، السعودية </p>
                             </div>
                         </label>
@@ -260,6 +262,7 @@
                             </div>
                             <div class="flex justify-start items-start flex-col gap-2">
                                 <span class="text-third-color font-semibold text-[18px]"> الرياض </span>
+                                <span class="text-third-color font-medium text-[17px]"> منقطة 1 - حي 1 </span>
                                 <p class="text-fourth-color font-medium text-[15px] mb-0"> MEMB3077، 3077 طريق مشاة، 8360، المشاعر، مكة 24258، السعودية </p>
                             </div>
                         </label>
