--- a/profile.html
+++ b/profile.html
@@ -210,7 +210,11 @@
     <!-- navbar -->
   
   <!-- profile -->
-    <div class="profile__layout py-[50px] lg:px-[100px] px-[20px]">
+    <div class="profile__layout">
+      <div class="bg-second-color py-4 lg:px-[100px] px-[20px] flex justify-center items-start flex-col gap-2 h-[150px] w-100">
+        <h5 class="text-primary-color font-semibold sm:text-[35px] text-[25px] "> مرحبا, أحمد  </h5>
+      </div>
+      <div class="py-[50px] lg:px-[100px] px-[20px]">
         <div class="row">
             <div class="col-md-3">
                 <div class="nav flex-column nav-pills me-3 gap-4 mb-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
@@ -580,6 +584,7 @@
                   </div>
             </div>
         </div>
+      </div>
     </div>
    <!-- profile -->
 
